# babyagi

./: .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  CNAME  Dockerfile  LICENSE  _config.yml  babyagi.py  docker-compose.yml  requirements.txt
babycoder/: babycoder.py  embeddings.py  objective.sample.txt
classic/: BabyBeeAGI.py  BabyCatAGI.py  BabyDeerAGI.py  babyagi.py
classic/BabyElfAGI/: main.py
classic/BabyElfAGI/skills/: code_reader.py  directory_structure.py  objective_saver.py  skill.py  skill_saver.py  text_completion.py  web_search.py
classic/BabyElfAGI/tasks/: task_registry.py
classic/babyfoxagi/: babyagi.py  forever_cache.ndjson  main.py  ongoing_tasks.py  pyproject.toml
classic/babyfoxagi/public/static/: chat.js
classic/babyfoxagi/skills/: airtable_search.py  call_babyagi.py  code_reader.py  directory_structure.py  documentation_search.py  drawing.py  image_generation.py  play_music.py  pretty_me.py  skill.py  skill_saver.py  startup_analysis.py  text_completion.py  web_search.py
classic/babyfoxagi/tasks/: task_registry.py
extensions/: argparseext.py  dotenvext.py  human_mode.py  pinecone_storage.py  ray_objectives.py  ray_tasks.py  requirements.txt  weaviate_storage.py
node/: .env.example  babyagi.js
tools/: results.py  results_browser.py
