[tool.poetry]
name = "python-template"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

# Pin dependencies to specific versions to ensure reproducibility
# and avoid potential version conflicts.
[tool.poetry.dependencies]
python = "^3.8,<3.9"
numpy = "^1.22.2"
Flask = "^2.2.0"
urllib3 = "^1.26.12"
openai = "^0.27.8"
requests = "^2.28.1"  # Added requests library as a dependency
tasks = "^2.8.0"
python-dotenv = "^1.0.0"
skills = "^0.3.0"
beautifulsoup4 = "^4.11.1"  # Replaced bs4 with beautifulsoup4 for better clarity
twilio = "^8.5.0"
google-api-python-client = "^2.97.0"
xds-protos = "^0.0.11"

[tool.poetry.dev-dependencies]
debugpy = "^1.6.2"
replit-python-lsp-server = {extras = ["yapf", "rope", "pyflakes"], version = "^1.5.9"}
pytest = "^7.1.3"  # Added pytest for improved testing capabilities
pytest-cov = "^4.0.0"  # Added pytest-cov for coverage reporting

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
